# book-service

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  docker-compose.yml  readme.md
app/: main.cpp
cmake/: FindGRPC.cmake
config/: config.json  snapshot.json
examples/: addBook.curl  delBook.curl  getBooksList.curl  getUsersList.curl  users.json
include/: Books.hpp  Connection.hpp  Controller.hpp  Database.hpp  Demo.hpp  MongoDB.hpp  Singleton.hpp  util.hpp
proto/: data.proto  message.proto  operation.proto
src/: Connection.cpp  Controller.cpp  Database.cpp  Demo.cpp  MongoDB.cpp  util.cpp
test/: CMakeLists.txt  MongoDB.Test.cpp  main.cpp
